# LogSentry

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  THREAT_MODEL.md  logsentry.example.toml  pyproject.toml  todo.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml
examples/: README.md  sample.toml  sample_geo.csv
logsentry/: __init__.py  __main__.py  cli.py  config.py  engine.py  geo.py  ids.py  models.py  protocols.py  scoring.py  state.py
logsentry/detectors/: __init__.py  _common.py  bruteforce.py  failsucc.py  impossibletravel.py  newsourceip.py  offhours.py
logsentry/parsers/: __init__.py  authlog.py  base.py  csvparser.py
logsentry/report/: __init__.py  json_report.py  text_report.py
tests/: test_allowlist_uniform.py  test_authlog_parser.py  test_baseline.py  test_bruteforce.py  test_cli_exit_codes.py  test_config.py  test_config_validation.py  test_correlation.py  test_csv_parser.py  test_engine.py  test_failsucc.py  test_geo.py  test_impossibletravel.py  test_models.py  test_newsourceip.py  test_offhours.py  test_quickstart.py  test_r5_persist.py  test_report_snapshot.py  test_scoring.py
tests/fixtures/: allowlist.toml  analyze.toml  correlated.toml  events_bad.csv  events_clean.csv  events_missing_col.csv  geo_static.csv  golden_correlated.json  golden_report.json  golden_travel.json  ingest.toml  newip.toml  newip_cutoff.toml  newip_npct.toml  offhours.toml  travel.toml
