[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logsentry"
version = "0.0.0"
description = "Defensive auth-log anomaly detector (blue-team only)."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

[tool.setuptools]
packages = ["logsentry"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["logsentry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
