[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logsentry"
version = "0.2.0"
description = "Defensive auth-log anomaly detector (blue-team only)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
]

[project.optional-dependencies]
geo = ["geoip2"]
dev = ["ruff", "mypy", "pytest"]

[tool.setuptools]
packages = ["logsentry"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["logsentry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
